--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ http = "1"
 bytes = "1.8.0"
 http-body-util = "0.1"
 hyper-util = { version = "0.1", default-features = false, features = ["client-legacy", "tokio"] }
-hyper-rustls = {version = "0.27", features = ["http1","http2","logging","native-tokio","ring","rustls-platform-verifier","tls12","webpki-tokio"]}
+hyper-rustls = {version = "0.27", default-features = false, features = ["http1","http2","logging","native-tokio","ring","rustls-platform-verifier","tls12","webpki-tokio"]}
 rustls = { version = "0.23", default-features = false, features = ["tls12", "ring"] }
 tokio = { version = "1.0", features = ["io-std", "macros", "net", "rt-multi-thread"] }
 
