--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 
-reqwest = { version = "0.12", features = ["blocking", "cookies", "http2"]}
+#reqwest = { version = "0.12", features = ["blocking", "cookies", "http2"]}
 
 http = "1"
 bytes = "1.8.0"
