--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,6 @@ edition = "2021"
 
 [dependencies]
 
-#reqwest = { version = "0.12", features = ["blocking", "cookies", "http2"]}
-
 http = "1"
 bytes = "1.8.0"
 http-body-util = "0.1"
@@ -23,3 +21,10 @@ serde_json = "1.0"
 serde-aux = "4"
 chrono = "0.4.38"
 url = "2.5"
+
+hashbrown = "0.15.2"
+reqwest = { version = "0.12", features = ["blocking", "cookies", "http2", "socks"]}
+ureq = "2.10.1"
+rand = "0.8.5"
+futures = "0.3"
+rusqlite = { version = "0.32", features = ["bundled"] }
